--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -2,6 +2,12 @@ vi:
   layouts:
     application:
       title: "Ruby on Rails Co ban"
+    header:
+      home: "Trang chủ"
+      help: "Trợ giúp"
+      login: "Đăng nhập"
+      english: "Tiếng Anh"
+      vietnamese: "Tiếng Việt"
   static_pages:
     home:
       fore_title: "Trang chủ"
@@ -9,6 +15,7 @@ vi:
       intro_1: "Đây là trang chủ của"
       name_tutorial: "Ruby on Rails Co Ban"
       intro_2: "ứng dụng mẫu."
+      signup: "Đăng ký ngay!"
     help:
       fore_title: "Hỗ trợ"
       intro_1: "Nhận trợ giúp về Ruby on Rails Tutorial tại"
