--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -23,3 +23,15 @@ vi:
       intro_2: "Để nhận trợ giúp về ứng dụng mẫu này, hãy tham khảo"
       name_2: "Ruby on Rails Tutorial."
       intro_3: "sách"
+  users:
+    new:
+      sign_up: "Đăng nhập"
+      confirmation: "Xác nhận"
+      create_my_account: "Tạo tài khoản"
+    create:
+      welcome_to_the_sample_app!: "Chào mừng đến với ứng dụng này!"
+      registration_failed: "Đăng ký thất bại"
+    show:
+      created_at: "Ngày tạo: "
+      updated_at: "Ngày chỉnh sửa: "
+      user_not_found: "Người dùng không tồn tại !"
