--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -24,3 +24,15 @@ en:
       intro_2: "To get help on this sample app, see the"
       name_2: "Ruby on Rails Tutorial"
       intro_3: "book"
+  users:
+    new:
+      sign_up: "Sign up"
+      confirmation: "Confirmation"
+      create_my_account: "Create my account"
+    create:
+      welcome_to_the_sample_app!: "Welcome to the sample app!"
+      registration_failed: "Registration failed"
+    show:
+      created_at: "Created at: "
+      updated_at: "Updated at: "
+      user_not_found: "User not found!"
