--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -23,6 +23,9 @@ vi:
       intro_2: "Để nhận trợ giúp về ứng dụng mẫu này, hãy tham khảo"
       name_2: "Ruby on Rails Tutorial."
       intro_3: "sách"
+    login:
+      fore_title: "Đăng nhập"
+      sign_up_now: "Đăng kí ngay"
   users:
     new:
       sign_up: "Đăng nhập"
@@ -35,3 +38,9 @@ vi:
       created_at: "Ngày tạo: "
       updated_at: "Ngày chỉnh sửa: "
       user_not_found: "Người dùng không tồn tại !"
+  sessions:
+    new:
+      new_user: "Người dùng mới?"
+      login: "Đăng nhập"
+      sign_up: "Đăng ký ngay!"
+    invalid: "Email, mật khẩu không hợp lệ"
