--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -44,4 +44,5 @@ en:
       new_user: "New User?"
       login: "Log in"
       sign_up: "Sign up now!"
+      remember_me: "Remember me"
     invalid: "invalid_email_password_combination"
