--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -66,6 +66,13 @@ vi:
       success_update: "Cập nhật thông tin thành công"
       update_fail: "Cập nhật thông tin khong thành công"
     please_login: "Vui lòng đăng nhập"
+    follow:
+      follow: "Theo dõi"
+    unfollow:
+      unfollow: "Bỏ theo dõi"
+    show_follow:
+      view_profile: "Xem trang cá nhân"
+      microposts: "Bài đăng"
   sessions:
     new:
       new_user: "Người dùng mới?"
@@ -136,7 +143,12 @@ vi:
       error: "lỗi"
     micropost_form:
       placeholder: "Tạo bài viết mới..."
+    stats:
+      following: "Đang theo dõi"
+      follower: "người theo dõi"
   post: "Gửi"
   image_type: "phải là định dạng hình ảnh hợp lệ"
   image_size: "phải nhỏ hơn %{size} MB"
   message_image: "Kích thước tệp tối đa là %{size} MB. Vui lòng chọn một tệp nhỏ hơn."
+  following: "Đang theo dõi"
+  followers: "Người theo dõi"
