--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -71,6 +71,7 @@ en:
       login: "Log in"
       sign_up: "Sign up now!"
       remember_me: "Remember me on this computer"
+      forgot_password: "Forgot password"
     invalid: "invalid_email_password_combination"
   user_mailer:
     account_activation:
@@ -78,10 +79,32 @@ en:
       greetings: "Hi"
       welcome: "Welcome to the Sample App! Click on the link below to activate your account:"
       active: "Active"
+    password_reset:
+      subject: "Password reset"
+      name: "Password Reset"
+      info: "To reset your password click the link below:"
+      hi: "Hi "
+      info_2: "This link will expire in two hours."
+      info_3: "If you did not request your password to be reset, please ignore this email and your password will stay as it is."
+      reset: "Reset Password"
   account_activations:
     edit:
       account_activated: "Account activated!"
       invalid_activation: "Invalid activation link"
+  password_resets:
+    reset_expired: "Password reset has expired."
+    reset_success: "Password has been reset."
+    reset_fail: "Can not reset password"
+    empty_password: "can't be empty"
+    new:
+      forgot_password: "forgot password"
+      submit: "Submit"
+    create:
+      success: "Email sent with password reset instructions"
+      fail: "Email address not found"
+    edit:
+      reset_password: "Reset password"
+      submit: "Update password"
   activerecord:
     models:
       user:
@@ -90,3 +113,6 @@ en:
         email: "Email"
         password: "Password"
         password_confirmation: "Confirm password"
+  password_reset:
+    forgot_password: "Forgot password"
+    submit: "Submit"
